@@ -181,9 +181,12 @@ else:
         return x.decode(charset, errors)
 
 
-def to_unicode(x, charset=sys.getdefaultencoding(), errors='strict'):
+def to_unicode(x, charset=sys.getdefaultencoding(), errors='strict',
+               allow_none_charset=False):
     if x is None:
         return None
     if not isinstance(x, bytes):
         return text_type(x)
+    if charset is None and allow_none_charset:
+        return x
     return x.decode(charset, errors)
